--- a/NPDV/ML_FONTES_PRODUTO/Estoque/pdv/PDV.dproj
+++ b/NPDV/ML_FONTES_PRODUTO/Estoque/pdv/PDV.dproj
@@ -107,6 +107,7 @@
         <DCC_ExeOutput>..\exe</DCC_ExeOutput>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
+        <Debugger_RunParams>CAIXA_TESTE</Debugger_RunParams>
     </PropertyGroup>
     <ItemGroup>
         <DelphiCompile Include="$(MainSource)">
