--- a/NPDV/ML_FONTES_PRODUTO/Estoque/pdv/PDV.dproj
+++ b/NPDV/ML_FONTES_PRODUTO/Estoque/pdv/PDV.dproj
@@ -3,7 +3,7 @@
         <ProjectGuid>{248AD81A-C962-42E3-A2D9-233CEABAACE6}</ProjectGuid>
         <MainSource>PDV.dpr</MainSource>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Debug</Config>
+        <Config Condition="'$(Config)'==''">Release</Config>
         <TargetedPlatforms>1025</TargetedPlatforms>
         <AppType>Application</AppType>
         <FrameworkType>VCL</FrameworkType>
@@ -91,6 +91,9 @@
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
         <AppEnableHighDPI>true</AppEnableHighDPI>
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
+        <DCC_ExeOutput>C:\Fontes\Sistema Frente De Caixa Pdv\NPDV\ML_FONTES_PRODUTO\Estoque\exe</DCC_ExeOutput>
+        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
+        <VerInfo_Locale>1033</VerInfo_Locale>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_GenerateStackFrames>true</DCC_GenerateStackFrames>
