Convertendo RP => Mysql

--- a/NPDV/ML_FONTES_PRODUTO/Estoque/fontes/EstoqueAll.dproj
+++ b/NPDV/ML_FONTES_PRODUTO/Estoque/fontes/EstoqueAll.dproj
@@ -50,6 +50,7 @@
         <DCC_S>false</DCC_S>
         <DCC_F>false</DCC_F>
         <DCC_K>false</DCC_K>
+        <Custom_Styles>Carbon|VCLSTYLE|$(BDSCOMMONDIR)\Styles\Carbon.vsf</Custom_Styles>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
