--- a/NPDV/ML_FONTES_PRODUTO/Estoque/pdv/PDV.dproj
+++ b/NPDV/ML_FONTES_PRODUTO/Estoque/pdv/PDV.dproj
@@ -103,11 +103,13 @@
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
         <DCC_ExeOutput>C:\Fontes\Sistema Frente De Caixa Pdv\NPDV\ML_FONTES_PRODUTO\Estoque\exe</DCC_ExeOutput>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
-        <VerInfo_Locale>1033</VerInfo_Locale>
         <BT_BuildType>Debug</BT_BuildType>
         <Icon_MainIcon>PDV_Icon2.ico</Icon_MainIcon>
         <UWP_DelphiLogo44>..\images\icones\62941-card-file-box-icon.png</UWP_DelphiLogo44>
         <UWP_DelphiLogo150>..\images\icones\62941-card-file-box-icon.png</UWP_DelphiLogo150>
+        <VerInfo_Keys>CompanyName=Galanos;FileDescription=Galanos;FileVersion=1.0.5.0;InternalName=Galanos;LegalCopyright=Galanos;LegalTrademarks=Galanos;OriginalFilename=Galanos;ProductName=Galanos;ProductVersion=1.0.0.0;Comments=PDV</VerInfo_Keys>
+        <VerInfo_Release>5</VerInfo_Release>
+        <VerInfo_Locale>1033</VerInfo_Locale>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_GenerateStackFrames>true</DCC_GenerateStackFrames>
@@ -128,6 +130,8 @@
         <Icon_MainIcon>PDV_Icon1.ico</Icon_MainIcon>
         <UWP_DelphiLogo44>..\images\icones\62941-card-file-box-icon 2.png</UWP_DelphiLogo44>
         <UWP_DelphiLogo150>..\images\icones\62941-card-file-box-icon.png</UWP_DelphiLogo150>
+        <VerInfo_Build>4</VerInfo_Build>
+        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.4;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
     </PropertyGroup>
     <ItemGroup>
         <DelphiCompile Include="$(MainSource)">
@@ -158,6 +162,10 @@
         <DCCReference Include="untImpressao.pas"/>
         <DCCReference Include="uFRMDespesas.pas">
             <Form>FrmDespesas</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="UFrmFechamento.pas">
+            <Form>frmFechamento</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <BuildConfiguration Include="Debug">
